--- a/scrumboard/templates/scrumboard/home.html
+++ b/scrumboard/templates/scrumboard/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,24 +9,17 @@
 <body ng-app="scrumboard.demo">
     {% verbatim %}
     <div ng-controller="ScrumboardController">
-        {{ person.name }} is {{ person.age }} years old
+        <div ng-repeat="list in data">
+            <h3>{{ list.name }}</h3>
+            <ul>
+                <li ng-repeat="card in list.cards">{{ card.title }}</li>
+            </ul>
+            <input type="text" ng-model="new_title" />
+            <button ng-click="add(list, new_title)">+</button>
+        </div>
     </div>
     {% endverbatim %}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-    <script>
-        (function(){ 
-            'use strict';
-
-            angular.module('scrumboard.demo', [])
-                .controller('ScrumboardController', ['$scope', ScrumboardController]);
-
-            function ScrumboardController($scope) {
-                $scope.person = {
-                    name: "Uchencho",
-                    age: 26
-                };
-            }
-        }());
-    </script>
+    <script src="{% static 'scrumboard/scrumboard.js' %}"></script>
 </body>
 </html>
